--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="./script.js"></script>
   </head>
   <body>
-    <h1>Hello world</h1>
+    <h1>Hello world!!!</h1>
+    <h1>Hello world!!!</h1>
   </body>
 </html>
